fix typo at 'clean'

--- a/deck.mdx
+++ b/deck.mdx
@@ -30,7 +30,7 @@ A revision of DevOps initiative
 
 Follow the conventional Maven Build Lifecycle
 
-- clean
+- Clean
 - Download dependencies
 - Compile source
 - Compile test
