--- a/deck.mdx
+++ b/deck.mdx
@@ -1,5 +1,6 @@
 import { Split } from 'mdx-deck'
 import { themes } from 'mdx-deck'
+import CICD from './nomnoml-src/cicd';
 export const theme = themes.future;
 
 # State-Of-DevOps
@@ -32,6 +33,7 @@ Follow the conventional Maven Build Lifecycle
 
 - Clean
 - Download dependencies
+## Additional processes in Build Process
 - Compile source
 - Compile test
 - Unit test
@@ -40,7 +42,6 @@ Follow the conventional Maven Build Lifecycle
 
 ---
 
-## Additional processes in Build Process
 
 - Static Analysis
 - Sonar Scan
@@ -102,4 +103,9 @@ point C
 
 ---
 
+# workflows
+
+<CICD/>
+
+---
 # The End
