DevOps in a nutshell

--- a/deck.mdx
+++ b/deck.mdx
@@ -9,6 +9,14 @@ A revision of DevOps initiative
 
 ---
 
+# DevOps in a nutshell
+
+---
+
+![](https://www.mindhubit.com/img/carousel/feature-devops.png)
+
+---
+
 # Environment
 
 ---
