split additional build processes

--- a/deck.mdx
+++ b/deck.mdx
@@ -60,21 +60,31 @@ Follow the conventional Maven Build Lifecycle
 
 ---
 
-## Additional processes in Build Process (1/2)
-- Compile source
-- Compile test
-- Unit test
-- Package
-- Install
+## Additional processes
 
----
+<Split>
 
-## Additional processes in Build Process (2/2)
-- Static Analysis
-- Sonar Scan
-- Deploy to artifactory
-- Deploy to DEV environment
-- Archive artifacts
+<div align="left">
+
+<p align="left">Compile source</p>
+<p align="left">Compile test</p>
+<p align="left">Unit test</p>
+<p align="left">Package</p>
+<p align="left">Install</p>
+
+</div>
+
+<div align="left">
+
+<p align="left">Static Analysis</p>
+<p align="left">Sonar Scan</p>
+<p align="left">Deploy to artifactory</p>
+<p align="left">Deploy to environment</p>
+<p align="left">Archive artifacts</p>
+
+</div>
+
+</Split>
 
 ---
 
