jenkins artifactory test environment

--- a/deck.mdx
+++ b/deck.mdx
@@ -124,7 +124,7 @@ point C
 
 # workflows
 
-<Workflow src="[Jenkins]->[Artifactory]" />
+<Workflow src="[Jenkins]->[Artifactory] -> [Test environment]" />
 
 ---
 
