fix error in nomnoml workflow

--- a/deck.mdx
+++ b/deck.mdx
@@ -124,7 +124,8 @@ point C
 
 # workflows
 
-<Workflow src="[Jenkins]->[Artifactory] -> [Test environment]" />
+<Workflow src="[Jenkins]->[Artifactory]
+[Artifactory]->[UAT]" />
 
 ---
 
